[package]
name = "cells"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[[bench]]
name = "topological"
harness = false

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.61", features = ["Clipboard", "ClipboardEvent", "Navigator"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
lazy_static = "1.4"
regex = "^1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4.0"
